--- a/requirements.txt
+++ b/requirements.txt
@@ -45,4 +45,6 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz#egg=en_core_web_sm
+python-dotenv==1.1.0
+spacy==3.7.1
+en-core-web-sm==3.7.1
