--- a/requirements.txt
+++ b/requirements.txt
@@ -46,5 +46,4 @@ typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
 python-dotenv==1.1.0
-spacy[cpu]==3.7.5
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.5/en_core_web_sm-3.7.5-py3-none-any.whl#egg=en_core_web_sm
+spacy==3.7.5
