--- a/requirements.txt
+++ b/requirements.txt
@@ -47,3 +47,5 @@ typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
 python-dotenv==1.1.0
+youtube-transcript-api==0.6.0
+google-api-python-client==2.81.0
